Fix section alignment

--- a/src/components/Global/Section/index.scss
+++ b/src/components/Global/Section/index.scss
@@ -5,6 +5,7 @@
     display: flex;
     // flex-direction: column;
     // gap: 24px;
+    align-items: center;
     justify-content: space-between;
     margin-bottom: 60px;
 
@@ -16,6 +17,8 @@
       line-height: 110%;
       text-transform: uppercase;
       color: var(--egp-darker-green);
+      padding: 0;
+      margin: 0;
     }
 
     .introduction {
